# pynancas

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  apoio.py  app.py  create_db.py  docker-compose.yml  finance.db  import_moneywiz.py  main.py  ntb_main.py  pyproject.toml  requirements.txt  telegram_bot.py
data/: import_moneywiz.py
model/: create_db.py  db_crud.py  import_data.py  log.py  pynancas_Class.py
src/: create_db.py  import_data.py  query.sql
static/styles/css/: offcanvas.css
static/styles/js/: category_ajax.js  pynancas.js
templates/: accounts.html  base-nav.html  base.html  categories.html  creditcard.html  edit_account.html  edit_category.html  edit_transaction.html  index.html  login.html  menu.html  register.html  transaction.html  transfer.html
