[tool.poetry]
name = "pynancas"
version = "0.1.0"
description = "personal finance app"
authors = ["Rhuan Lima"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.4"
readchar = "^3.0.4"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
