[tool.poetry]
name = "pynancas"
version = "0.1.0"
description = "Personal finance app"
authors = ["Rhuan Lima <rhuan.lima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
sqlalchemy = "^2.0.24"
flask = "^3.0.0"
python-dateutil = "^2.8.2"
flask-babel = "^4.0.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
